2006-09-27 Carlos Nieves Onega <cnieves@iespana.es>

	* configure.ac : Applied patch #1564796 by Cesar Strauss, 
	enabling Cygwin's compilation. Thanks.
	
2006-09-24 Ales Hvezda   <ahvezda@geda.seul.org>

        * AUTHORS: Updated file pointing people at gschem's AUTHOR file 
        as the complete list of authors.  Merged all listed files in this
        file into gschem's file.

2006-09-07 SDB sdb@cloud9.net>
	* scheme/gnet-gsch2pcb.scm.in:  Applied cursor patch
	from Peter Clifton. 
	
2006-09-06 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated program version to 20060906.
	
	* src/gnetlist.c: Added CUSTOM_VERSION to all
	printfs/output/dialog boxes where VERSION is used so that it is
	easier to create custom version of gEDA/gaf.

2006-09-03 Carlos Nieves Onega <cnieves@iespana.es>

	* scheme/gnet-drc2.scm: Applied patch #1551415 from Tomas Solc.
	  Some part of an error message was written in standard output 
	  instead of the the output file. Thanks.
	
2006-08-31 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.ac: Updated gtk+ tests to look for 2.4.x or greater.

	* src/gnetlist.c: Removed obsolete code fragment

2006-08-29 Ales Hvezda   <ahvezda@geda.seul.org>

	* scheme/gnet-gsch2pcb.scm.in: Applied patch by Jeff Mallatt to
	fix gnet-gsch2pcb.scm fix m4 params bug/limit of 3.  Patch#1542726.
	Thanks.

2006-08-22 Ales Hvezda   <ahvezda@geda.seul.org>
	
	* scheme/Makefile.am: Added a couple files to the distclean and
	maintainerclean rules to make distcheck happy.

2006-08-21 Ales Hvezda   <ahvezda@geda.seul.org>

        * README: Updated the README a little to be ready for the next
        release.

2006-08-19 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped version number to 20060821 in prep for the
        next gEDA/gaf release.

2006-07-04 Ales Hvezda   <ahvezda@geda.seul.org>

	* tests/multiequal.spice-sdb: Updated golden file to take into
	account case change of .end
