@@ -1,3 +1,10 @@
+2006-10-20 Ales Hvezda   <ahvezda@geda.seul.org>
+
+        * configure.ac: Bumped package version to 20061020.
+
+	* scheme/gnet-PCB.scm: Applied patch (#1453908) by Thien-Thi Nguyen
+	that cleans up / simplifies some scheme code.
+
 2006-09-27 Carlos Nieves Onega <cnieves@iespana.es>
 
 	* configure.ac : Applied patch #1564796 by Cesar Strauss, 
